selection mode, delete selected
